@@ -9,7 +9,7 @@ Version 2.20.1
 
 * The following bugs are resolved with this release:
 
-  17266, 17370, 17371.
+  17266, 17370, 17371, 17460.
 
 Version 2.20
 
